<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:orientation="vertical"
    tools:context=".AboutFragment">
    
    
  <LinearLayout
      android:orientation="vertical"
      android:layout_marginTop="0dp"
      android:layout_marginStart="0dp"
      android:layout_marginEnd="0dp"
      android:id="@+id/dws"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">


<!--       about shubhadip-->

      <LinearLayout
          android:layout_width="match_parent"
          android:orientation="vertical"
          android:background="@drawable/custom_bg"
          android:layout_height="wrap_content">

          <ImageView
              android:id="@+id/imageView"
              android:layout_gravity="center"
              android:layout_width="100dp"
              android:layout_height="100dp"
              android:src="@drawable/shubhadip_bhowmik" />

          <TextView
              android:text="@string/app_name"
              android:layout_gravity="center"
              android:textSize="20sp"
              android:textStyle="bold"
              android:textColor="@color/white"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>

          <TextView
              android:text="@string/role"
              android:layout_gravity="center"
              android:textSize="20sp"
              android:layout_marginBottom="6dp"
              android:textColor="@color/white"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>

<!--          social media -->
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
             android:layout_gravity="center_horizontal"
              android:gravity="center_horizontal"
              android:orientation="horizontal">

              <ImageView
                  android:id="@+id/linkedinIcon"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="15dp"
                  android:src="@drawable/linkedin_32"
                  android:importantForAccessibility="no"  />

              <ImageView
                  android:id="@+id/gitHubIcon"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="15dp"
                  android:src="@drawable/github_32"
                  android:importantForAccessibility="no" />
              <ImageView
                  android:id="@+id/mediumIcon"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="15dp"
                  android:src="@drawable/medium_32"
                  android:importantForAccessibility="no"
                  />
              <ImageView
                  android:id="@+id/devToIcon"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="15dp"
                  android:src="@drawable/dev_32"
                  android:importantForAccessibility="no"
                  />
              <ImageView
                  android:id="@+id/youTubeIcon"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="15dp"
                  android:src="@drawable/youtube_32"
                  android:importantForAccessibility="no"
                  />

              <ImageView
                  android:id="@+id/gmailIcon"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="15dp"
                  android:src="@drawable/gmail_32"
                  android:importantForAccessibility="no"
                  />

          </LinearLayout>

<!--           social icons ends here-->
<LinearLayout
    android:gravity="center_horizontal"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@drawable/custom_btn_01"
        app:backgroundTint="@null"
        android:textColor="@color/white"
        android:text="Hire Me" />


    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:background="@drawable/custom_btn_01"
        app:backgroundTint="@null"
        android:text="Resume" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        android:background="@drawable/custom_btn_01"
        app:backgroundTint="@null"
        android:text="e-mail" />

</LinearLayout>

<!--          buttons ends up here -->
          <LinearLayout
              android:orientation="vertical"
              android:layout_marginStart="16dp"
              android:layout_marginEnd="16dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

              <TextView
                  android:text="@string/about_me_txt"
                  android:padding="6dp"
                  android:background="@drawable/custom_btn_01"
                  android:textStyle="bold"
                  android:textColor="@color/white"
                  android:textSize="20sp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>

              <TextView
                  android:padding="6dp"
                  android:text="@string/about_me"
                  android:layout_marginTop="6dp"
                  android:layout_marginBottom="10dp"
                  android:textColor="@color/white"
                  android:textSize="18sp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>

              <TextView
                  android:padding="6dp"
                  android:background="@drawable/custom_btn_01"
                  android:text="@string/my_blog"
                  android:textStyle="bold"
                  android:textColor="@color/white"
                  android:textSize="20sp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
          </LinearLayout>

          <GridLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:rowCount="3"
              android:columnCount="1">

              <!--math 2023 1 chapters -->
              <androidx.cardview.widget.CardView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_row="0"
                  android:layout_column="0"
                  android:layout_gravity="fill"
                  android:layout_rowWeight="1"
                  android:layout_columnWeight="1"
                  android:backgroundTint="@color/white"
                  android:layout_margin="8dp"
                  app:cardCornerRadius="8dp"
                  app:cardElevation="5dp" >

                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:gravity="center_vertical"
                      android:layout_margin="8dp"
                      android:padding="10dp">

                      <ImageView
                          android:layout_width="50dp"
                          android:gravity="center_vertical"
                          android:layout_height="50dp"
                          android:layout_marginStart="10dp"
                          android:layout_marginEnd="25dp"
                          android:src="@drawable/shubhadip_bhowmik"/>

                      <LinearLayout
                          android:layout_width="wrap_content"
                          android:orientation="vertical"
                          android:layout_marginEnd="20dp"
                          android:layout_height="wrap_content">
                          <TextView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:textColor="@color/blue"
                              android:text="Codedune"
                              android:gravity="center_vertical"
                              android:textStyle="bold"
                              android:textSize="20sp"
                              />

                      </LinearLayout>

                      <Button
                          style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                          android:id="@+id/mathChap1Btn"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:gravity="center_vertical"
                          android:text="PDF" />


                  </LinearLayout>

              </androidx.cardview.widget.CardView>

              <!--math 2023 1 chapters -->
              <androidx.cardview.widget.CardView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_row="1"
                  android:layout_column="0"
                  android:layout_gravity="fill"
                  android:layout_rowWeight="1"
                  android:layout_columnWeight="1"
                  android:backgroundTint="@color/white"
                  android:layout_margin="8dp"
                  app:cardCornerRadius="8dp"
                  app:cardElevation="5dp" >

                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:gravity="center_vertical"
                      android:layout_margin="8dp"
                      android:padding="10dp">

                      <ImageView
                          android:layout_width="50dp"
                          android:gravity="center_vertical"
                          android:layout_height="50dp"
                          android:layout_marginStart="10dp"
                          android:layout_marginEnd="25dp"
                          android:src="@drawable/shubhadip_bhowmik"/>

                      <LinearLayout
                          android:layout_width="wrap_content"
                          android:orientation="vertical"
                          android:layout_marginEnd="20dp"
                          android:layout_height="wrap_content">
                          <TextView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="Codedune"
                              android:gravity="center_vertical"
                              android:textStyle="bold"
                              android:textSize="20sp"
                              />

                      </LinearLayout>

                      <Button
                          style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                          android:id="@+id/mathChap1Btn3"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:gravity="center_vertical"
                          android:text="PDF" />


                  </LinearLayout>

              </androidx.cardview.widget.CardView>

              <!--math 2023 1 chapters -->
              <androidx.cardview.widget.CardView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_row="2"
                  android:layout_column="0"
                  android:layout_gravity="fill"
                  android:layout_rowWeight="1"
                  android:layout_columnWeight="1"
                  android:backgroundTint="@color/white"
                  android:layout_margin="8dp"
                  app:cardCornerRadius="8dp"
                  app:cardElevation="5dp" >

                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:gravity="center_vertical"
                      android:layout_margin="8dp"
                      android:padding="10dp">

                      <ImageView
                          android:layout_width="50dp"
                          android:gravity="center_vertical"
                          android:layout_height="50dp"
                          android:layout_marginStart="10dp"
                          android:layout_marginEnd="25dp"
                          android:src="@drawable/shubhadip_bhowmik"/>

                      <LinearLayout
                          android:layout_width="wrap_content"
                          android:orientation="vertical"
                          android:layout_marginEnd="20dp"
                          android:layout_height="wrap_content">
                          <TextView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="Codedune"
                              android:gravity="center_vertical"
                              android:textStyle="bold"
                              android:textSize="20sp"
                              />

                      </LinearLayout>

                      <Button
                          style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                          android:id="@+id/mathChap1Btn4"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:gravity="center_vertical"
                          android:text="PDF" />


                  </LinearLayout>

              </androidx.cardview.widget.CardView>


          </GridLayout>

      </LinearLayout>

  </LinearLayout>

</ScrollView>